--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
         </dependency>
         <dependency>
             <groupId>io.restx</groupId>
+            <artifactId>restx-jongo</artifactId>
+            <version>${restx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.restx</groupId>
             <artifactId>restx-factory-admin</artifactId>
             <version>${restx.version}</version>
         </dependency>
@@ -65,6 +70,12 @@
         <dependency>
             <groupId>io.restx</groupId>
             <artifactId>restx-specs-tests</artifactId>
+            <version>${restx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.restx</groupId>
+            <artifactId>restx-jongo-specs-tests</artifactId>
             <version>${restx.version}</version>
             <scope>test</scope>
         </dependency>
