--- a/src/main/resources/specs/invoice/Delete_invoice_20130720_1635.spec.yaml
+++ b/src/main/resources/specs/invoice/Delete_invoice_20130720_1635.spec.yaml
@@ -3,8 +3,8 @@ given:
   - time: 2013-07-20T16:35:15.098+02:00
   - collection: invoices
     data: |
-        { "reference" : "12346" , "date" : { "$date" : "2013-07-18T22:00:00.000Z"} , "status" : "DRAFT" , "emitter" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "recipient" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
-        { "reference" : "12345" , "date" : { "$date" : "2013-07-18T22:00:00.000Z"} , "status" : "DRAFT" , "emitter" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "recipient" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea9fac6bc89255aef4c74c"}}
+        { "reference" : "12346" , "date" : { "$date" : "2013-07-18T22:00:00.000Z"} , "status" : "DRAFT" , "seller" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "buyer" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
+        { "reference" : "12345" , "date" : { "$date" : "2013-07-18T22:00:00.000Z"} , "status" : "DRAFT" , "seller" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "buyer" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea9fac6bc89255aef4c74c"}}
 wts:
   - when: |
        DELETE invoices/51ea9fac6bc89255aef4c74c
