--- a/src/main/resources/specs/invoice/Find_invoice_by_key_20130720_1628.spec.yaml
+++ b/src/main/resources/specs/invoice/Find_invoice_by_key_20130720_1628.spec.yaml
@@ -3,7 +3,7 @@ given:
   - time: 2013-07-20T16:28:37.745+02:00
   - collection: invoices
     data: |
-        { "reference" : "12345" , "date" : { "$date" : "2013-07-19T22:00:00.000Z"} , "status" : "DRAFT" , "emitter" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "recipient" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
+        { "reference" : "12345" , "date" : { "$date" : "2013-07-19T22:00:00.000Z"} , "status" : "DRAFT" , "seller" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "buyer" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
 wts:
   - when: |
        GET invoices/51ea98b06bc86553b820f7e3
