--- a/src/main/resources/specs/invoice/Find_invoices_20130720_1627.spec.yaml
+++ b/src/main/resources/specs/invoice/Find_invoices_20130720_1627.spec.yaml
@@ -3,10 +3,10 @@ given:
   - time: 2013-07-20T16:27:23.808+02:00
   - collection: invoices
     data: |
-        { "reference" : "12345" , "date" : { "$date" : "2013-07-19T22:00:00.000Z"} , "status" : "DRAFT" , "emitter" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "recipient" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
+        { "reference" : "12345" , "date" : { "$date" : "2013-07-19T22:00:00.000Z"} , "status" : "DRAFT" , "seller" : { "name" : "Xavier Hanin" , "address" : { "body" : "111, av du truc" , "zipCode" : "33700" , "city" : "Merignac"}} , "buyer" : { "name" : "ACME Inc" , "address" : { "body" : "1122, pooder st" , "zipCode" : "12345 CA" , "city" : "Palo Alto"}} , "grossAmount" : 10025 , "vats" : [ ] , "netAmount" : 11960 , "lines" : [ ] , "_id" : { "$oid" : "51ea98b06bc86553b820f7e2"}}
 wts:
   - when: |
        GET invoices
        Cookie: RestxSession={"_expires":"2013-08-19T16:27:23.808+02:00","principal":"admin","sessionKey":"ea04362a-0e1f-4d55-b625-062c9c96e951"}; RestxSessionSignature=tpTIcH7LrAmeYO7tzJc25QtPS/c=
     then: |
-        [{"reference":"12345","date":"2013-07-19","status":"DRAFT","emitter":{"name":"Xavier Hanin","address":{"body":"111, av du truc","zipCode":"33700","city":"Merignac"}},"recipient":{"name":"ACME Inc","address":{"body":"1122, pooder st","zipCode":"12345 CA","city":"Palo Alto"}},"grossAmount":100.25,"vats":[],"netAmount":119.6,"lines":[],"_id":"51ea98b06bc86553b820f7e2"}]
+        [{"reference":"12345","date":"2013-07-19","status":"DRAFT","seller":{"name":"Xavier Hanin","address":{"body":"111, av du truc","zipCode":"33700","city":"Merignac"}},"buyer":{"name":"ACME Inc","address":{"body":"1122, pooder st","zipCode":"12345 CA","city":"Palo Alto"}},"grossAmount":100.25,"vats":[],"netAmount":119.6,"lines":[],"_id":"51ea98b06bc86553b820f7e2"}]
