--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,29 @@
         <restx.version>0.2.9-SNAPSHOT</restx.version>
     </properties>
 
+    <build>
+      <plugins>
+        <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>copy-dependencies</id>
+              <phase>install</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
+              <configuration>
+                <includeScope>compile</includeScope>
+                <includeScope>runtime</includeScope>
+                <excludeScope>test</excludeScope>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </build>
+
+
     <dependencies>
         <dependency>
             <groupId>io.restx</groupId>
@@ -71,6 +94,12 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.9</version>
+        </dependency>
+        <dependency>
+            <groupId>io.restx</groupId>
+            <artifactId>restx-barbarywatch</artifactId>
+            <version>${restx.version}</version>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>io.restx</groupId>
