--- a/pom.xml
+++ b/pom.xml
@@ -13,31 +13,8 @@
     <properties>
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
-        <restx.version>0.2.9-SNAPSHOT</restx.version>
+        <restx.version>0.2.9</restx.version>
     </properties>
-
-    <build>
-      <plugins>
-        <plugin>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <executions>
-            <execution>
-              <id>copy-dependencies</id>
-              <phase>install</phase>
-              <goals>
-                <goal>copy-dependencies</goal>
-              </goals>
-              <configuration>
-                <includeScope>compile</includeScope>
-                <includeScope>runtime</includeScope>
-                <excludeScope>test</excludeScope>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-      </plugins>
-    </build>
-
 
     <dependencies>
         <dependency>
