--- a/srv/pom.xml
+++ b/srv/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>1.7</maven.compiler.target>
         <maven.compiler.source>1.7</maven.compiler.source>
         <restx.version>0.32-SNAPSHOT</restx.version>
+        <project.war.resources.directory>../ui/dist</project.war.resources.directory>
     </properties>
 
     <dependencies>
@@ -112,4 +113,20 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <configuration>
+                    <webResources>
+                        <resource>
+                            <!-- this is relative to the pom.xml directory -->
+                            <directory>${project.war.resources.directory}</directory>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
