--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,7 @@
         </dependency>
         <dependency>
             <groupId>io.restx</groupId>
-            <artifactId>restx-log-admin</artifactId>
-            <version>${restx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.restx</groupId>
-            <artifactId>restx-server-jetty</artifactId>
+            <artifactId>restx-server-simple</artifactId>
             <version>${restx.version}</version>
         </dependency>
         <dependency>
